--- a/product.html
+++ b/product.html
@@ -55,7 +55,7 @@
             placeholder="Search"
             aria-label="Search"
           />
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="searchButton" onclick="callApi()" >
             Search
           </button>
         </form>
