--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
     <!-- Style -->
     <link rel="stylesheet" href="css/style.css" />
 
-    <title>Login #2</title>
+    <title>Login</title>
   </head>
 
   <body>
