--- a/signup.html
+++ b/signup.html
@@ -22,7 +22,7 @@
     <!-- Style -->
     <link rel="stylesheet" href="css/style.css" />
 
-    <title>Login #2</title>
+    <title>sign-up</title>
   </head>
 
   <body>
@@ -55,6 +55,15 @@
                     id="email"
                   />
                 </div>
+                <div class="form-group last mb-3">
+                  <label for="password">Password</label>
+                  <input
+                    type="password"
+                    class="form-control"
+                    placeholder="Your Password"
+                    id="password"
+                  />
+                </div>
                 <div class="form-group first">
                   <label for="username">Phone number</label>
                   <input
@@ -73,15 +82,16 @@
                     id="dob"
                   />
                 </div>
-                <div class="form-group last mb-3">
-                  <label for="password">Password</label>
+                <div class="form-group first">
+                  <label for="username">Address</label>
                   <input
-                    type="password"
+                    type="text"
                     class="form-control"
-                    placeholder="Your Password"
-                    id="password"
+                    placeholder="123 street, city ,state, zip"
+                    id="address"
                   />
                 </div>
+                
                 <div class="d-flex mb-5 align-items-center">
                   <label class="control control--checkbox mb-0"
                     ><span class="caption">Remember me</span>
