--- a/login.html
+++ b/login.html
@@ -67,7 +67,7 @@
                     <div class="control__indicator"></div>
                   </label>
                   <span class="ml-auto"
-                    ><a href="/signup.html" class="forgot-pass">Signup</a></span
+                    ><a href="./signup.html" class="forgot-pass">Signup</a></span
                   >
                 </div>
                 <input
@@ -120,7 +120,7 @@
               console.log("Signup successful:", data);
               alert("Signin successful!");
 
-              window.location.href = "http://127.0.0.1:5500/home.html";
+              window.location.href = "./home.html";
             })
             .catch((error) => {
               // Handle error response
