--- a/signup.html
+++ b/signup.html
@@ -91,7 +91,7 @@
                     id="address"
                   />
                 </div>
-                
+
                 <div class="d-flex mb-5 align-items-center">
                   <label class="control control--checkbox mb-0"
                     ><span class="caption">Remember me</span>
@@ -99,7 +99,7 @@
                     <div class="control__indicator"></div>
                   </label>
                   <span class="ml-auto"
-                    ><a href="/login.html" class="forgot-pass">Login</a></span
+                    ><a href="./login.html" class="forgot-pass">Login</a></span
                   >
                 </div>
                 <input
@@ -119,43 +119,47 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
     <script>
-      document.getElementById('signupForm').addEventListener('submit', function (event) {
-        event.preventDefault(); // Prevent default form submission
-        
-        // Get form data
-        var formData = {
-          fullName: document.getElementById('fullName').value,
-          email: document.getElementById('email').value,
-          phoneNumber: document.getElementById('phoneNumber').value,
-          password: document.getElementById('password').value
-        };
+      document
+        .getElementById("signupForm")
+        .addEventListener("submit", function (event) {
+          event.preventDefault(); // Prevent default form submission
 
-        // Send fetch POST request
-        fetch('http://localhost:3000/signup', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-          },
-          body: JSON.stringify(formData),
-        })
-        .then(response => {
-          if (!response.ok) {
-            throw new Error('Signup failed');
-          }
-          return response.json();
-        })
-        .then(data => {
-          // Handle success response
-          console.log('Signup successful:', data);
-          alert('Signup successful!');
+          // Get form data
+          var formData = {
+            fullName: document.getElementById("fullName").value,
+            email: document.getElementById("email").value,
+            phoneNumber: document.getElementById("phoneNumber").value,
+            password: document.getElementById("password").value,
+            address: document.getElementById("address").value,
+          };
 
-          window.location.href = "http://127.0.0.1:5500/home.html"
-        })
-        .catch(error => {
-          // Handle error response
-          console.error('Signup error:', error);
-          alert('Signup failed. Please try again later.');
+          // Send fetch POST request
+          fetch("http://localhost:3000/signup", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify(formData),
+          })
+            .then((response) => {
+              if (!response.ok) {
+                throw new Error("Signup failed");
+              }
+              return response.json();
+            })
+            .then((data) => {
+              // Handle success response
+              console.log("Signup successful:", data);
+              alert("Signup successful!");
+
+              window.location.href = "./home.html";
+            })
+            .catch((error) => {
+              // Handle error response
+              console.error("Signup error:", error);
+              alert("Signup failed. Please try again later.");
+            });
         });
-      });    </script>
+    </script>
   </body>
 </html>
