--- a/payment.html
+++ b/payment.html
@@ -30,7 +30,7 @@
       <div
         class="bg order-1 order-md-2"
         style="
-          background-image: url('images/Debitcard.jpg');
+          background-image: url('https://storage.googleapis.com/radheproject/Debitcard.jpg');
           background-size: contain;
           background-repeat: no-repeat;
           background-position: center;
